# shift-scheduler

./: .gitignore  ARCHITECTURE.md  COMPLETE_WEB_INTERFACE_SUMMARY.txt  COMPONENTS_CHECKLIST.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_IMPLEMENTED.md  LOGIN_PAGE_COMPLETE.md  LOGOUT_FEATURE_COMPLETE.md  MAKEFILE_GUIDE.md  MAKE_COMMAND_COMPLETE.md  MIGRATION_GUIDE.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REFACTOR_COMPLETE_FINAL.md  REFERENCE_CARD.sh  SAAS_README.md  SAAS_REFACTOR_COMPLETE.md  SESSION_COMPLETE.md  SETUP_COMPLETE.md  SETUP_STATUS.sh  USER_GUIDE.md  WEB_INTERFACE_DEMO.md  WEB_INTERFACE_GUIDE.md  check_backend.sh  cli.py  config.py  dashboard.sh  examples-api.sh  examples.py  fuzz_test.py  log.txt  log2.txt  (+12 more)
.github/: copilot-instructions.md
.github/workflows/: sync.yml
src/: __init__.py
src/api/: __init__.py  main.py
src/constraints/: __init__.py  hard_constraints.py
src/models/: __init__.py  data_models.py
src/objectives/: __init__.py  dynamic_objectives.py
src/solver/: __init__.py  core_solver.py
static/: schedule.js  setup.js  style.css  ui_helpers.js
templates/: index.html  login.html  schedule.html  setup.html  worker_availability.html
tests/: __init__.py  test_scheduling.py
